# filmogophery

./: .air.toml  .example.env  .gitignore  Makefile  README.md  compose.axum.yml  compose.echo.yml  compose.hono.yml  compose.shared.yml  compose.yml  go.mod  go.sum
.github/workflows/: backend-test.yml  frontend-e2e.yml  go-test.yml
.rest/: health.rest  movie.rest
.rest/auth/: login.rest
.rest/master/: genres.rest  media.rest  platforms.rest
.rest/movie/: get_detail.rest  get_movies.rest  post_impression.rest  put_impression.rest  put_record.rest
.rest/review/: get_review_history.rest  post_review.rest  put_review.rest
.rest/search/: search_movies.rest
.rest/trending/: get_trending_movies.rest
.rest/user/: create_user.rest
.rest/watchlist/: get_watchlist.rest
api-axum/: .example.env  Cargo.toml  README.md
api-axum/src/: config.rs  main.rs
api-axum/src/app/: mod.rs  responses.rs  router.rs
api-axum/src/app/features/: mod.rs
api-axum/src/app/features/auth/: handler.rs  use_case.rs
api-axum/src/app/features/health/: handler.rs  mod.rs  use_case.rs
api-axum/src/app/features/master/: handler.rs  repository.rs  use_case.rs
api-axum/src/app/features/movie/: handler.rs  mod.rs  repository.rs  use_case.rs
api-axum/src/app/features/review/: handler.rs  repository.rs  use_case.rs
api-axum/src/app/features/search/: handler.rs  use_case.rs
api-axum/src/app/features/trending/: handler.rs  use_case.rs
api-axum/src/app/features/user/: handler.rs  mod.rs  repository.rs  use_case.rs
api-axum/src/app/features/watchlist/: handler.rs  repository.rs  use_case.rs
api-axum/src/pkg/: db.rs  jwt.rs  logger.rs  mod.rs  redis.rs  tmdb.rs
api-axum/src/pkg/middleware/: auth.rs
api-echo/: .air.toml  go.mod  go.sum
api-echo/tests/: db.go
api-hono/: .example.env  .gitignore  README.md  drizzle.config.ts  package.json  tsconfig.json
api-hono/src/: index.ts  server.ts
cmd/migration/: migrate.go
cmd/server/: main.go
docker/server/: Dockerfile  Dockerfile.axum  Dockerfile.echo  Dockerfile.hono
docs/: db_structure.md  home_tab.md  index.html  openapi.yaml  readme.md  watch_list.md
filmogophery-api/: .example.env  go.mod  go.sum  my.cnf
filmogophery-api/tests/: db.go  fixture.go
filmogophery-front/: README.md  next.config.mjs  package-lock.json  package.json
internal/config/: config.go
internal/db/: mysql.go
internal/health/: handler.go
internal/movie/: command_service.go  handler.go  query_service.go  repository.go
internal/tmdb/: handler.go  model.go  service.go
pkg/response/: response.go
web-next-js/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
web-next-js/e2e/: home-authenticated.spec.ts  home.spec.ts  (+2 more)
(+388 files in other folders)
